--- a/app/views/findingaids/_form.html.erb
+++ b/app/views/findingaids/_form.html.erb
@@ -10,53 +10,69 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= form.label :filename %>
-    <%= form.text_field :filename %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label "File" %></strong></div>
+    <div class="col-md-5">
+      <%= form.hidden_field :filename, readonly: true, disabled: true %>
+      <%= @findingaid.filename %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :content %>
-    <%= form.text_field :content %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label :slug %></strong></div>
+    <div class="col-md-5"><%= form.text_field :slug %></div>
   </div>
-
-  <div class="field">
-    <%= form.label :md5sum %>
-    <%= form.text_field :md5sum %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label "Ead id" %></strong></div>
+    <div class="col-md-5">
+      <%= form.hidden_field :eadid, readonly: true, disabled: true %>
+      <%= @findingaid.eadid %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :sha1sum %>
-    <%= form.text_field :sha1sum %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label "Ead url" %></strong></div>
+    <div class="col-md-5">
+      <%= form.hidden_field :eadurl, readonly: true, disabled: true %>
+      <%= @findingaid.eadurl %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :slug %>
-    <%= form.text_field :slug %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label "Md5" %></strong></div>
+    <div class="col-md-5">
+      <%= form.hidden_field :md5sum, readonly: true, disabled: true %>
+      <%= @findingaid.md5sum %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :eadid %>
-    <%= form.text_field :eadid %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label "Sha-1" %></strong></div>
+    <div class="col-md-5">
+      <%= form.hidden_field :sha1sum, readonly: true, disabled: true %>
+      <%= @findingaid.sha1sum %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :eadurl %>
-    <%= form.text_field :eadurl %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label "Size" %></strong></div>
+    <div class="col-md-5">
+      <%= form.hidden_field :content, readonly: true, disabled: true %>
+      <%= @findingaid.content.length %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :state %>
-    <%= form.text_field :state %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label :state %></strong></div>
+    <div class="col-md-5">
+      <%= form.hidden_field :state, readonly: true, disabled: true %>
+      <%= @findingaid.state %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= form.label :error %>
-    <%= form.text_field :error %>
+  <div class="row" class="field">
+    <div class="col-md-1"><strong><%= form.label :error %></strong></div>
+    <div class="col-md-5">
+      <%= form.hidden_field :error, readonly: true, disabled: true %>
+      <%= @findingaid.error %>
+    </div>
   </div>
-
-  <div class="actions">
-    <%= form.submit %>
+  <br>
+  <div class="row" class="actions">
+    <div class="col-md-1"></div>
+    <div class="col-md-5"><%= form.submit %></div>
   </div>
 <% end %>
