--- a/app/views/findingaids/new.html.erb
+++ b/app/views/findingaids/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Findingaid</h1>
-
+<div class="container">
+<h1>New Finding Aid</h1>
+<div>&nbsp;</div>
 <%= render 'form', findingaid: @findingaid %>
-
+<hr>
 <%= link_to 'Back', findingaids_path %>
+<div>&nbsp;</div>
+</div>
